# what-changed

./: LICENSE  Makefile  README.md  changelogs.py  commits.py  flake.nix  overrides.nix  pyproject.toml
.github/workflows/: main.yaml
src/what_changed/: __main__.py  changelogs.py  commits.py  formatters.py  utils.py
tests/: test_linkification.py
