[tool.poetry]
name = "what-changed"
version = "0.0.0"
description = "Tool for obtaining changelogs for Nixpkgs"
authors = [
    "Jan Tojnar <jtojnar@gmail.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
libversion = "^1.2"
requests = "^2.23"
pygit2 = "^1.2"

[tool.poetry.dev-dependencies]
mypy = "^0.770"

[tool.poetry.scripts]
what-changed = 'what_changed.__main__:main'

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
